--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1 class="intro__title">Your Favorite One Page Multi Purpose Template</h1>
                 <h2 class="intro__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna
                     vel scelerisque nisl consectetur et.</h2>
-                <button href="#" class="btn btn--red">Find Out More</button>
+                <button class="btn btn--red">Find Out More</button>
             </div>
         </div>
     </div><!-- /inro -->
